Actualiza la versión de nelmio/api-doc-bundle a 5.4
